syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option go_package = "./pb";

package event;

message Event {
    string id = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp start_at = 4;
    google.protobuf.Timestamp finish_at = 5;
    string user_id = 6;
}

message CreateEventRequest {
    Event event = 1;
}

message CreateEventResponse {
    Event event = 1;
}

message UpdateEventRequest {
    Event event = 2;
}

message UpdateEventResponse {
    Event event = 1;
}

message DeleteEventRequest {
    string id = 1;
}

message GetDayEventsRequest {
    google.protobuf.Timestamp time = 1;
}

message GetDayEventsResponse {
    repeated Event event = 1;
}

message GetWeekEventsRequest {
    google.protobuf.Timestamp time = 1;
}

message GetWeekEventsResponse {
    repeated Event event = 1;
}
message GetMonthEventsRequest {
    google.protobuf.Timestamp time = 1;
}

message GetMonthEventsResponse {
    repeated Event event = 1;
}

service CalendarService {
    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {}
    rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {}
    rpc DeleteEvent(DeleteEventRequest) returns (google.protobuf.Empty) {}
    rpc GetDayEvents(GetDayEventsRequest) returns (GetDayEventsResponse) {}
    rpc GetWeekEvents(GetWeekEventsRequest) returns (GetWeekEventsResponse) {}
    rpc GetMonthEvents(GetMonthEventsRequest) returns (GetMonthEventsResponse) {}
}

